# metarepo-cpe-tag

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  metarepo2json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  schemas  setup.py
.github/workflows/: python-app.yml
cpe_tag/: conf.py  cpe.py  errors.py  generators.py  searchers.py  serializers.py  utils.py  version.py
cpe_tag/cpe_tag/: errors.py  generators.py  init.py  searchers.py  serializers.py  utils.py
cpe_tag/cpe_tag/contracts/: generators.py  schemas.py  searchers.py  serializers.py
cpe_tag/cpe_tag/schemas/: tagged_package.schema.json
cpe_tag/schemas/: batch.schema.json  cpe.schema.json  cpe_2.3_regex.txt  package.schema.json  tagged_batch.schema.json  tagged_package.schema.json
schemas/: category.schema.json  kit.schema.json  package.schema.json
tests/: test_cpe.py  test_generators.py  test_searchers.py  test_serializers.py  test_utils.py
