[tool.poetry]
name = "metarepo-cpe-tag"
version = "1.1.0"
description = "Tags Linux pkgs with CPE (nvd.nist.gov)"
license = "MPL-2.0"
authors = ["mrl5 <31549762+mrl5@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/mrl5/metarepo-cpe-tag"
repository = "https://github.com/mrl5/metarepo-cpe-tag.git"
keywords = ["cpe", "cve", "linux", "funtoo", "gentoo"]
packages = [
    { include = "cpe_tag" },
]
include = ["LICENSE", "CHANGELOG.md"]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mrl5/metarepo-cpe-tag/issues"


[tool.poetry.dependencies]
python = "^3.7"
jsonschema =" ^4.4.0"
click = { version = "^8.0.3", optional = true }
requests = { version = "^2.27.1", optional = true }


[tool.poetry.extras]
cli = ["click", "requests"]


[tool.poetry.dev-dependencies]
black = "^21.12b0"
coverage = "^6.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.17.0"
pytest-cov = "^3.0.0"
types-requests = "^2.27.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
